--- a/src/pages/catalogo/index.astro
+++ b/src/pages/catalogo/index.astro
@@ -11,7 +11,7 @@ import { products } from '../../data/products';
   <div class="flex flex-col min-h-screen">
     <Header />
     
-    <main class="flex-grow w-full max-w-7xl mx-auto px-4 py-12 sm:px-6 lg:px-8">
+    <main class="flex-grow w-full max-w-7xl mx-auto px-4 pt-32 pb-12 sm:px-6 lg:px-8">
       <Breadcrumbs items={[{ label: 'Catálogo' }]} />
       
       <div class="text-center mb-16">
